--- a/config/database.yml
+++ b/config/database.yml
@@ -22,4 +22,7 @@ test:
 
 production:
   <<: *default
-  database: db/production.sqlite3
+  adapter: postgresql
+  database: aditya_production
+  username: aditya
+  password: <%= ENV["ADITYA_DATABASE_PASSWORD"] %>
